--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ body, html {
 } 
 main{ 
     position: relative; 
-    height: 100vh; 
+    height: 98%; 
     width: 100vw;
 } 
 section#login{  
@@ -57,5 +57,50 @@ div#formulario > h1{
 
 }
 div#formulario > p{ 
+    font-size: 0.8em;
+}
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+div.campo > label{ 
+    display: none;
+}
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover {
+    background-color: #2c615f;
+}
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    color: #49a09d;
+    border: 1px solid #49a09d;
+    margin-top: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+form > a.botao:hover{ 
+    background-color: #49a09d;
+    color: white;
+}
+form > a.botao > span {
     font-size: 0.8em;
 }
