--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,36 +18,40 @@ body, html {
     width: 100vw;
 } 
 main{ 
-    position: relative; 
+
     height: 98%; 
     width: 100vw;
+    padding: 70px;px;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
 } 
-section#login{  
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    overflow: hidden; 
+section#login{ 
 
     background-color: white; 
-    width: 250px;
     height: 500px; 
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452); 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+     
      
     transition: width .3s, height .3s; 
     transition-timing-function: ease;
+
+
+    flex: auto;
+
 } 
  
 section#login > div#imagem{ 
-    display: block; 
+
     background: #5f2c82 url(../imagens/pexels-guiirossi-1755695.jpg) no-repeat; 
-    background-size: cover; 
-    background-position: center bottom; 
+    background-size: cover;
     height: 200px;
 } 
 section#login > div#formulario{
-    display: block;
+
     padding: 10px;
 
 }
@@ -62,8 +66,6 @@ div#formulario > p{
 form > div.campo{
     background-color: #5f2c82;
     border: solid #5f2c82;
-    display: block;
-    width: 100%;
     height: 40px;
     border-radius: 8px;
     margin: 5px 0px;
@@ -86,6 +88,7 @@ div.campo input{
     border: 0px;
     border-radius: 8px;
     padding: 4px;
+
 }
 div.campo > input:focus-within{
     background-color: white;
